# WPE-Rivals

./: README.md
ROS_examples/: Notes.md  Notes.txt  README.md
ROS_examples/actions/: Actions.txt
ROS_examples/services/: Services.txt
ROS_examples/topics/: Topics.txt
pi_test/: package.xml  setup.cfg  setup.py
pi_test/pi_test/: pi_test_listener.py  pi_test_sender.py
pi_test/resource/: sample_drive_system
pytest_build_file/: colcon_command_prefix_setup_py.sh.env
pytest_build_file/pi_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pytest_build_file/prefix_override/: sitecustomize.py
sample_drive_system/: gamepad_reader.py  motor_controller.py
