<?xml version="1.0"?>
<package format="3">
  <name>sample_drive_system</name>
  <version>0.0.0</version>
  <description>pi test</description>

  <maintainer email="epikRosTester@example.com">Unknown</maintainer>
  <license>aint-need-no-liscense</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>